--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,7 +1,6 @@
 services:
   databases:
     image: "postgres:16.0-alpine3.18"
-    environment:
-      POSTGRES_PASSWORD: "local_password"
+    env_file: ../.env                   //Usar o "-" no começo caso adicone outro PATH
     ports:
       - "5432:5432"
