move `.env` file to `.env.development`

--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,6 +1,6 @@
 services:
   databases:
     image: "postgres:16.0-alpine3.18"
-    env_file: ../.env                   //Usar o "-" no começo caso adicone outro PATH
+    env_file: ../.env.development
     ports:
       - "5432:5432"
